<resources>
    <string name="app_name">DAM-Retrofit</string>
    <string name="dap_logo">DAP Logo</string>
    <string name="campus_igualada_udl">Campus Igualada - UdL</string>
    <string name="introduce_your_name">Introduce your name:</string>
    <string name="name">Name</string>
    <string name="token">Token</string>
    <string name="select_your_birthday">Select your birthday:</string>
    <string name="check">Check</string>
    <string name="reset">Reset</string>
    <string name="bio">Bio:</string>
</resources>
